feat: user type to the user model
