# internal/repositories/models/user.go
@@ -6,11 +6,29 @@ import (
 	"github.com/google/uuid"
 )
 
+//swagger:enum userType
+type UserType string
+
+const (
+	StandardUser UserType = "standard"
+	AdminUser    UserType = "admin"
+)
+
+func (ut UserType) IsValid() bool {
+	switch ut {
+	case StandardUser, AdminUser:
+		return true
+	default:
+		return false
+	}
+}
+
 type User struct {
 	ID        uuid.UUID `json:"id"`
 	FirstName string    `json:"first_name"`
 	LastName  string    `json:"last_name"`
 	Email     string    `json:"email"`
+	UserType  UserType  `json:"user_type"` // "admin" | "standard"
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
